--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   },
   "scripts": {
